--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,8 @@
 .App {
+  min-height: 100vh;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 .App-logo {
@@ -51,4 +54,33 @@
   .calorie-meter{
     width: 50vw;
   }
+}
+
+.content-container{
+  flex: 1 0 auto;
+}
+
+.footer-container{
+  background: #3f51b5;
+  color: #080a17;
+  flex-shrink: 0;
+  text-align: start;
+}
+footer{
+  flex-shrink:0;
+  width: 80%;
+  margin: 0 auto;
+  padding: 20px 0;
+  display: flex;
+  flex-wrap: wrap;
+  
+}
+.footer-links-container{
+  width: 180px;
+  padding-bottom: 10px;
+}
+.footer-links{
+  display: block;
+  color: #fff; 
+  text-decoration: none;
 }
