--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -1,5 +1,7 @@
-$primary-text: rgb(46, 46, 46);
-$secondary-text: #8860d0;
+$primary-text: rgb(34, 34, 34);
+$alt-primary-text: #8a7ef1;
+$secondary-text: #3f51b5;
+$tertiary-text: #757575;
 
-$primary-background: #c1c8e4;
-$secondary-background: #84ceeb;
+$primary-background: #c1d1e4;
+$secondary-background: #b4bbff;
