--- a/frontend/src/stylesheets/partials/_footer.scss
+++ b/frontend/src/stylesheets/partials/_footer.scss
@@ -19,6 +19,9 @@
         width: 140px;
         padding-bottom: 10px;
       }
+      h3 {
+        color: $primary-text;
+      }
       a {
         display: block;
         color: $secondary-text;
