--- a/frontend/src/stylesheets/partials/_nav.scss
+++ b/frontend/src/stylesheets/partials/_nav.scss
@@ -4,7 +4,6 @@ nav {
   margin: 0;
   height: 36px;
   background: $secondary-background;
-  z-index: 1002;
   .nav-container {
     width: 60%;
     margin: 0 auto;
@@ -12,6 +11,7 @@ nav {
     flex-flow: row nowrap;
     justify-content: space-between;
     h1 {
+      color: $primary-text;
       margin: 10px 0;
     }
     .nav-links-container {
