--- a/frontend/src/stylesheets/_variables.scss
+++ b/frontend/src/stylesheets/_variables.scss
@@ -4,4 +4,4 @@ $secondary-text: #3f51b5;
 $tertiary-text: #757575;
 
 $primary-background: #c1d1e4;
-$secondary-background: #b4bbff;
+$secondary-background: #aab0ec;
