--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -209,7 +209,7 @@ html {
   flex: 1 0 auto;
 }
 .App .footer-container {
-  background: #b4bbff;
+  background: #aab0ec;
   flex-shrink: 0;
 }
 .App .footer-container footer {
@@ -238,7 +238,7 @@ nav {
   width: 100%;
   margin: 0;
   height: 36px;
-  background: #b4bbff;
+  background: #aab0ec;
 }
 nav .nav-container {
   width: 60%;
